Fixed alignment

--- a/src/app/web/styles/main.scss
+++ b/src/app/web/styles/main.scss
@@ -38,3 +38,13 @@ img.logo {
 	min-width: 76px;
 	height: auto;
 }
+
+td {
+	border: 1px solid #ddd;
+  padding: 8px;
+}
+
+.cardView {
+	position: absolute;
+	width: 300px;
+}
